--- a/css/ticket.css
+++ b/css/ticket.css
@@ -73,7 +73,7 @@ main{
    padding: 1%;
 }
 
-#div-main-container > h2{
+#div-main-container  h2{
     background-color: 	#f7f0ff;
     width: 95%;
     margin-top: 2%;
